@@ -125,6 +125,16 @@ class PluginsModelPlugins extends JModelList
 			$this->_db->setQuery($query);
 			$result = $this->_db->loadObjectList();
 			$this->translate($result);
+			if (!empty($search))
+			{
+				foreach ($result as $i => $item)
+				{
+					if (!preg_match("/$search/i", $item->name))
+					{
+						unset($result[$i]);
+					}
+				}
+			}
 
 			$direction = ($this->getState('list.direction') == 'desc') ? -1 : 1;
 			JArrayHelper::sortObjects($result, $ordering, $direction, true, true);
@@ -242,11 +252,6 @@ class PluginsModelPlugins extends JModelList
 			if (stripos($search, 'id:') === 0)
 			{
 				$query->where('a.extension_id = ' . (int) substr($search, 3));
-			}
-			else
-			{
-				$search = $db->quote('%' . $db->escape($search, true) . '%');
-				$query->where('(' . 'a.name LIKE ' . $search . ')');
 			}
 		}
 
